--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@metamask/onboarding": "^1.0.0",
+    "use-metamask": "",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -27,7 +28,8 @@
     "source-map-explorer": "^2.5.2",
     "use-wallet": "^0.8.1",
     "web-vitals": "^1.0.1",
-    "web3": "^1.3.4"
+    "web3": "^1.3.4",
+    "ethers-utils": "2.1.11"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
